--- a/Lw2/Dockerfile
+++ b/Lw2/Dockerfile
@@ -3,8 +3,7 @@ FROM node:20
 WORKDIR /app
 
 COPY . .
-COPY docker-entrypoint.sh /docker-entrypoint.sh
 
-RUN chmod +x /docker-entrypoint.sh
+RUN chmod +x /app/docker-entrypoint.sh
 
-ENTRYPOINT [ "/docker-entrypoint.sh" ]
+ENTRYPOINT [ "/app/docker-entrypoint.sh" ]
